# Cardboard

./: LICENSE  README.md  cardboard.doap  io.github._12012015.Cardboard.json  meson.build
data/: cardboard.gresource.xml  io.github._12012015.Cardboard.desktop.in  io.github._12012015.Cardboard.gschema.xml  io.github._12012015.Cardboard.metainfo.xml.in  meson.build
data/gtk/: help-overlay.ui  post.ui  preferences.ui  style.css  window.ui
src/: cardboard.in  meson.build
src/py/: danbooru.py  main.py  post.py  preferences.py  tab.py
